# VoiceAssistantSkill

./: CMakeLists.txt  README.md
res/DataTemplate/: DataBase.db  Opportunities.json  Presentation.json  Schedule.json
src/: CMakeLists.txt
src/Applications/: CMakeLists.txt
src/Applications/MainServer/: CMakeLists.txt  MainServer.cpp  MainServer.hpp  main.cpp
src/Applications/MainServer/Modules/: CMakeLists.txt
src/Applications/MainServer/Modules/HTTPSServer/: CMakeLists.txt  HTTPSServer.cpp  HTTPSServer.hpp
src/Applications/MainServer/Modules/SSLSertificate/: CMakeLists.txt  SSLSertificate.cpp  SSLSertificate.h  SSLSertificate.hpp
src/Applications/MainServer/Modules/Worker/: CMakeLists.txt  Worker.cpp  Worker.hpp
src/Applications/MarusiaWorker/: .gitignore  CMakeLists.txt  MarusiaWorker.cpp  MarusiaWorker.hpp  main.cpp
src/Applications/MarusiaWorker/Modules/: CMakeLists.txt
src/Applications/MarusiaWorker/Modules/ScheduleManager/: CMakeLists.txt  ScheduleManager.cpp  ScheduleManager.hpp
src/Applications/MarusiaWorker/Modules/Worker/: CMakeLists.txt  Worker.cpp  Worker.hpp  WorkerM.cpp  WorkerM.hpp
src/Applications/SQLiteWebWrapper/: CMakeLists.txt  SQLiteWebWrapper.cpp  SQLiteWebWrapper.hpp  main.cpp
src/Applications/SQLiteWebWrapper/Modules/: CMakeLists.txt
src/Applications/SQLiteWebWrapper/Modules/Server/: CMakeLists.txt  DataBaseServer.cpp  DataBaseServer.hpp
src/lib/: CMakeLists.txt
src/lib/GlobalModules/: CMakeLists.txt
src/lib/GlobalModules/ClientDB/: CMakeLists.txt  ClientDB.cpp  ClientDB.hpp
src/lib/GlobalModules/Configer/: CMakeLists.txt  Configer.cpp  Configer.hpp
src/lib/GlobalModules/JSONFormatter/: CMakeLists.txt  JSONFormatter.cpp  JSONFormatter.hpp
src/lib/GlobalModules/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/lib/GlobalModules/SystemStat/: CMakeLists.txt  SystemStat.cpp  SystemStat.hpp
